src/snapshots/2ec__tests__hex_base_int_mode_render.snap
---
source: src/main.rs
expression: ta.backend()
---
"╭─────────────────────────────────╮     "
"│                                 │     "
"│                               7b│     "
"│HEX (16)                      int│     "
"╰─────────────────────────────────╯     "
"╭─────────────────────────────────╮     "
"│ 0 1 2 3 4 5 6 7 8 9 a b c d e f │     "
"│   + - * / %    & | ^ n ~ < >    │     "
"│root: sQrt                       │     "
"│ mem: store recall               │     "
"│base: Dec Oct Bin                │     "
"│mode: decimAl Sci                │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│? help      ESC clear        quit│     "
"╰─────────────────────────────────╯     "
"                                        "
